# agent-strudel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  main.py  overnight.py  pyproject.toml
.github/workflows/: deploy.yml
fine-tuner/: evaluator.py  generate.py  main.py  pyproject.toml
frontend/: README.md  app.js  index.html  model.js  styles.css  worker.js
frontend/models/smollm2-strudel/: chat_template.jinja  config.json  generation_config.json  tokenizer_config.json
training-data-gen/: agent.py  main.py  validator.py
training-data-gen/validator/: package-lock.json  package.json  validate.js
